# pinpoint

./: .env.example  .gitignore  ARCHITECTURE.md  DOCS.md  Makefile  QUICKSTART.md  README.md  app.js  decode.ts  docker-compose.yml  encode_client.ts  index.html  mock.json  mock_positions.json  nginx.conf  quickstart.sh  server.ts  styles.css  tests.html  utils.js
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile  README.md  mock_positions.json
backend/src/: lorawan_codec.rs  lorawan_stream.rs  main.rs
backup.disabled/: index.html  styles.css
docs/: HANDOVER_CHECKLIST.md  sequences.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.js
frontend/public/: config.json  uwb-solver.html
frontend/src/: App.jsx  kalman.js  main.jsx  setupTests.js  styles.css  test-utils.jsx  triangulation.js  triangulation.test.js
frontend/src/__tests__/: mock-json-positions.test.js  mock-json-positions.test.js.bkp  triangulation-3d-constantZ.test.js  triangulation-3d-reconstruct.test.js  triangulation-bounds.test.js  triangulation-specific.test.js  triangulation.test.js
frontend/src/__tests__/ui/: app-ignore-two-beacons.test.jsx  app-pollurl.test.jsx  canvas-controls.test.jsx  devices-overlay.test.jsx  layout-requirements.test.jsx  topbar.test.jsx  (+2 more)
frontend/src/components/: Admin.jsx  AnchorsCard.jsx  CalibrationHUD.jsx  CanvasControls.jsx  DevicesOverlay.jsx  Layout.js  Layout.jsx  MiniMap.jsx  PlanAnchorsOverlay.jsx  RightPanel.jsx
frontend/src/hooks/: useSvgPanZoom.js
(+4 files in other folders)
